fix : fix jumpy post list
add image to post creation and rendering

fix navbar links color, UI adjustments

--- a/src/Navbar/navbar.module.scss
+++ b/src/Navbar/navbar.module.scss
@@ -6,7 +6,7 @@
   background-color: #355591;
   color: aliceblue;
   width: 100vw;
-  box-shadow: 0px 6px 20px grey;
+  box-shadow: 0px 2px 5px lightgrey;
 
   .navbarContent {
     display: flex;
@@ -30,6 +30,7 @@
         display: none;
       }
     }
+
     .navbarBrand {
       display: flex;
       flex-direction: row;
@@ -37,13 +38,13 @@
       color: white;
       gap: 1rem;
 
-      img {
+      svg {
         height: 100%;
         width: "auto";
         padding-right: 1rem;
         color: white;
       }
-      a {
+      span {
         margin: auto;
       }
     }
@@ -51,6 +52,7 @@
       display: none;
       flex-direction: row;
       margin: auto 0;
+
       .navLink {
         padding-left: 1rem;
         padding-right: 1rem;
@@ -69,8 +71,8 @@
 }
 
 .mobileMenu {
-  position: absolute;
-  z-index: 1;
+  position: fixed;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   background-color: #355591;
@@ -89,7 +91,9 @@
     padding: 2rem;
     margin: 0 auto;
     color: white;
-
+    .navLink {
+      color: white;
+    }
   }
 
   &.expandNavbar {
