--- a/src/PostCard/postCard.module.scss
+++ b/src/PostCard/postCard.module.scss
@@ -4,15 +4,18 @@
   padding: 1rem;
   border: none;
   border-radius: 0.5rem;
-  box-shadow: 0px 0px 5px lightgrey;
+  box-shadow: none;
+  border: 0.1rem solid lightgray;
 
   &:hover {
-    box-shadow: none;
-    border: 0.1rem solid lightgray;
+    box-shadow: 0px 0px 5px lightgrey;
   }
-
-  .textContent{
-    margin:auto;
-    text-align:center;
+  .image {
+    height: 5rem;
+    width: 10rem;
+  }
+  .textContent {
+    margin: auto;
+    text-align: center;
   }
 }
