--- a/src/PostDetail/postDetail.module.scss
+++ b/src/PostDetail/postDetail.module.scss
@@ -1,16 +1,26 @@
 .postDetailComponent {
     display: flex;
     flex-direction: column;
-    padding: 4rem auto;
+    padding: 4rem 0;
+
+    .image {
+        margin: auto;
+        height: 5rem;
+        width: 10rem;
+      }
 
     .textContent{
         margin: auto;
+        width: 40rem;
+
         .postTitle {
 
         }
+        
         .postContent {
     
         }
+
     }
 
 }
