--- a/src/PostList/postList.module.scss
+++ b/src/PostList/postList.module.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   padding: 4rem 2rem;
   margin: auto;
-  max-width: 35rem;
+  max-width: 45rem;
+  height: 20rem;
   .postTitle {
     padding: 1rem;
     margin: auto;
